--- a/package.json
+++ b/package.json
@@ -1,21 +1,26 @@
 {
   "name": "vue-component-library",
-  "version": "1.0.0",
+  "version": "1.0.3",
   "description": "A Vue component library skeleton using TypeScript, Rollup and Storybook",
-  "main": "index.js",
+  "main": "lib/index.js",
+  "module": "lib/index.esm.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "rollup -c"
   },
-  "dependencies": {
-    "core-js": "^3.6.5",
+  "peerDependencies": {
     "vue": "^2.6.11",
     "vue-class-component": "^7.2.3",
     "vue-property-decorator": "^8.4.2"
   },
   "devDependencies": {
-    "node-sass": "^4.12.0",
-    "sass-loader": "^8.0.2",
-    "typescript": "~3.9.3",
+    "@rollup/plugin-commonjs": "^14.0.0",
+    "@rollup/plugin-node-resolve": "^8.4.0",
+    "@vue/compiler-sfc": "^3.0.0-rc.5",
+    "rollup": "^2.23.1",
+    "rollup-plugin-typescript2": "^0.27.2",
+    "rollup-plugin-vue": "^5.1.6",
+    "tslib": "^2.0.0",
+    "typescript": "^3.9.7",
     "vue-template-compiler": "^2.6.11"
   },
   "keywords": [
