--- a/package.json
+++ b/package.json
@@ -13,10 +13,14 @@
     "vue-property-decorator": "^8.4.2"
   },
   "devDependencies": {
+    "vue": "^2.6.11",
+    "vue-class-component": "^7.2.3",
+    "vue-property-decorator": "^8.4.2",
     "@rollup/plugin-commonjs": "^14.0.0",
     "@rollup/plugin-node-resolve": "^8.4.0",
     "@vue/compiler-sfc": "^3.0.0-rc.5",
     "rollup": "^2.23.1",
+    "rollup-plugin-peer-deps-external": "^2.2.3",
     "rollup-plugin-typescript2": "^0.27.2",
     "rollup-plugin-vue": "^5.1.6",
     "tslib": "^2.0.0",
