--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "build": "rollup -c",
     "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook"
+    "build-storybook": "build-storybook",
+    "test": "jest"
   },
   "peerDependencies": {
     "vue": "^3.0.0",
@@ -19,7 +20,7 @@
     "@rollup/plugin-node-resolve": "^11.2.0",
     "@rollup/plugin-typescript": "^8.2.1",
     "@storybook/vue3": "^6.2.2",
-    "@types/jest": "^24.0.19",
+    "@types/jest": "^24.9.1",
     "@typescript-eslint/eslint-plugin": "^2.33.0",
     "@typescript-eslint/parser": "^2.33.0",
     "@vue/compiler-sfc": "^3.0.11",
@@ -34,6 +35,7 @@
     "rollup-plugin-postcss": "^4.0.0",
     "rollup-plugin-typescript2": "^0.30.0",
     "rollup-plugin-vue": "^6.0.0",
+    "ts-jest": "^26.5.4",
     "typescript": "~3.9.3",
     "vue": "^3.0.0",
     "vue-class-component": "^8.0.0-0",
